end of tutorial 2

--- a/tutorials/02 - Introduction to PyTorch/02-example.Rmd
+++ b/tutorials/02 - Introduction to PyTorch/02-example.Rmd
@@ -342,15 +342,28 @@ print("Data labels", data_labels.shape, "\n", data_labels)
 
 Cool.
 
-## Optimization
+# Optimization
 
-We've got the model and the dataset, so now we'll "prepare the optimization of the model". This involves calculating the loss by using our batches. For binary classification, we can use Binary Cross Entropy (BCE) which is defined as
+We've got the model and the dataset, so now we'll "prepare the optimization of the model".
+
+> During training, we will perform the following steps:
+1. Get a batch from the data loader\
+2. Obtain the predictions from the model for the batch\
+3. Calculate the loss based on the difference between predictions and labels\
+4. Backpropagation: calculate the gradients for every parameter with respect to the loss\
+5. Update the parameters of the model in the direction of the gradients\
+
+## Loss modules
+
+We will be calculating the loss for a batch by using predefined loss functions. For binary classification, we can use Binary Cross Entropy (BCE) which is defined as
 
 $$
 \mathcal{L}_{BCE} = - \Sigma_{i}[y_i \log(x_i) + (1-y_i)\log(1 - x_i)]
 $$
 
-where $y$ are the labels and $x$ are predictions. Both between [0,1]. The full list of 20+ predefined loss functions pytorch has available is [here](https://pytorch.org/docs/stable/nn.html#loss-functions). There are two available for BCE, `[nn.BCELoss](https://pytorch.org/docs/stable/generated/torch.nn.BCELoss.html#torch.nn.BCELoss)` which expects the inputs to already be on the [0,1] scale, and `[nn.BCEWithLogitsLoss](https://pytorch.org/docs/stable/generated/torch.nn.BCEWithLogitsLoss.html#torch.nn.BCEWithLogitsLoss)` which has a sigmoid transformation. The tutorial advises the latter in our case:
+where $y$ are the labels and $x$ are predictions. Both between [0,1]. 
+
+The full list of 20+ predefined loss functions pytorch has available is [here](https://pytorch.org/docs/stable/nn.html#loss-functions). There are two available for BCE, `[nn.BCELoss](https://pytorch.org/docs/stable/generated/torch.nn.BCELoss.html#torch.nn.BCELoss)` which expects the inputs to already be on the [0,1] scale, and `[nn.BCEWithLogitsLoss](https://pytorch.org/docs/stable/generated/torch.nn.BCEWithLogitsLoss.html#torch.nn.BCEWithLogitsLoss)` which has a sigmoid transformation. The tutorial advises the latter in our case:
 
 >  This version is numerically more stable than using a plain Sigmoid followed by a BCE loss because of the logarithms applied in the loss function. Hence, it is adviced to use loss functions applied on “logits” where possible (remember to not apply a sigmoid on the output of the model in this case!).
 
@@ -394,7 +407,9 @@ We will also push the data and model parameters to the GPU. The tutorial notes i
 model.to(device)
 ```
 
-Next we set our model to training mode. To be continued...
+And now we'll train the model. 
+
+> There exist certain modules that need to perform a different forward step during training than during testing (e.g. BatchNorm and Dropout), and we can switch between them using `model.train()` and `model.eval()`.
 
 ```{python}
 def train_model(model, optimizer, data_loader, loss_module, num_epochs=100):
@@ -427,3 +442,211 @@ def train_model(model, optimizer, data_loader, loss_module, num_epochs=100):
             optimizer.step()
 ```
 
+Here we go... 
+
+```{python}
+train_model(model, optimizer, train_data_loader, loss_module)
+```
+
+It looks ready, I think? We'll find out. 
+
+## Saving a model
+
+All the learnable parameters from the model can be extractd by using `state_dict`. 
+
+```{python}
+state_dict = model.state_dict()
+print(state_dict)
+```
+
+Nice, this looks good. We'll save this so that we can load these same weights when needed later. 
+
+```{python}
+torch.save(state_dict, "our_model.tar")
+```
+
+Then to load it, we'll use `torch.load`, and the module function `load_state_dict` to overwrite our parameters with the new values. 
+
+```{python}
+# Load state dict from the disk
+state_dict = torch.load("our_model.tar")
+
+# Create a new model and load the state
+new_model = SimpleClassifier(
+  num_inputs = 2, 
+  num_hidden = 4, 
+  num_outputs = 1
+)
+new_model.load_state_dict(state_dict)
+
+# Check that the parameters are the same in both
+print("Original model\n", model.state_dict())
+print("\nLoaded model\n", new_model.state_dict())
+```
+Neat. Apparently when we load the state dict we also get back this nice *All keys matched successfully* message in the console. 
+
+# Evaluation
+
+The model is trained, now we can evaluate it on a test set. We'll create this test dataset using our XOR dataset class. 
+
+```{python}
+test_dataset = XORDataset(size = 500)
+
+#drop_last means don't drop the last batch although it's smaller than 128
+test_data_loader = data.DataLoader(
+  test_dataset, 
+  batch_size = 128, 
+  shuffle = False, 
+  drop_last = False
+) 
+```
+
+And onward to our evaluation function. We'll use accuracy as our metric, i.e. # correct / # predictions. 
+
+Since we don't need to calculate the gradients for evaluation, we can deactivate this to speed up the model and reduce the required memory by using `with torch.no_grad():...`. 
+
+```{python}
+def eval_model(model, data_loader):
+    model.eval() # Set model to eval mode
+    true_preds, num_preds = 0., 0.
+
+    with torch.no_grad(): # Deactivate gradients for the following code
+        for data_inputs, data_labels in data_loader:
+
+            # Determine prediction of model on dev set
+            data_inputs, data_labels = data_inputs.to(device), data_labels.to(device)
+            preds = model(data_inputs)
+            preds = preds.squeeze(dim=1)
+            preds = torch.sigmoid(preds) # Sigmoid to map predictions between 0 and 1
+            pred_labels = (preds >= 0.5).long() # Binarize predictions to 0 and 1
+
+            # Keep records of predictions for the accuracy metric (true_preds=TP+TN, num_preds=TP+TN+FP+FN)
+            true_preds += (pred_labels == data_labels).sum()
+            num_preds += data_labels.shape[0]
+
+    acc = true_preds / num_preds
+    print(f"Accuracy of the model: {100.0*acc:4.2f}%")
+```
+
+
+```{python}
+eval_model(model, test_data_loader)
+```
+
+> If we trained our model correctly, we should see a score close to 100% accuracy. However, this is only possible because of our simple task, and unfortunately, we usually don’t get such high scores on test sets of more complex tasks.
+
+What if we try this again with different batch sizes for the test data? 
+
+```{python}
+test_dataset2 = XORDataset(size = 98*1000)
+test_data_loader2 = data.DataLoader(
+  test_dataset, 
+  batch_size = 89, 
+  shuffle = True, 
+  drop_last = False
+) 
+
+eval_model(model, test_data_loader2)
+```
+I noticed that smaller batch sizes take slightly more time to complete if we have a larger dataset, but otherwise no change in the accuracy.
+
+# Visualizing classification boundaries
+
+We can see where the model has created decision boundaries by getting out predictions for every data point in a range of [-0.5, 1.5]. Here's the code. 
+
+```{python}
+@torch.no_grad() # Decorator, same effect as "with torch.no_grad(): ..." over the whole function.
+def visualize_classification(model, data, label):
+    if isinstance(data, torch.Tensor):
+        data = data.cpu().numpy()
+    if isinstance(label, torch.Tensor):
+        label = label.cpu().numpy()
+    data_0 = data[label == 0]
+    data_1 = data[label == 1]
+
+    fig = plt.figure(figsize=(4,4), dpi=500)
+    plt.scatter(data_0[:,0], data_0[:,1], edgecolor="#333", label="Class 0")
+    plt.scatter(data_1[:,0], data_1[:,1], edgecolor="#333", label="Class 1")
+    plt.title("Dataset samples")
+    plt.ylabel(r"$x_2$")
+    plt.xlabel(r"$x_1$")
+    plt.legend()
+
+    # Let's make use of a lot of operations we have learned above
+    model.to(device)
+    c0 = torch.Tensor(to_rgba("C0")).to(device)
+    c1 = torch.Tensor(to_rgba("C1")).to(device)
+    x1 = torch.arange(-0.5, 1.5, step=0.01, device=device)
+    x2 = torch.arange(-0.5, 1.5, step=0.01, device=device)
+    xx1, xx2 = torch.meshgrid(x1, x2, indexing='ij')  # Meshgrid function as in numpy
+    model_inputs = torch.stack([xx1, xx2], dim=-1)
+    preds = model(model_inputs)
+    preds = torch.sigmoid(preds)
+    output_image = (1 - preds) * c0[None,None] + preds * c1[None,None]  # Specifying "None" in a dimension creates a new one
+    output_image = output_image.cpu().numpy()  # Convert to numpy array. This only works for tensors on CPU, hence first push to CPU
+    plt.imshow(output_image, origin='lower', extent=(-0.5, 1.5, -0.5, 1.5))
+    plt.grid(False)
+    return fig
+
+_ = visualize_classification(model, dataset.data, dataset.label)
+plt.show()
+```
+
+Oooh, pretty. The blurry areas are where the model has more uncertainty. 
+
+# Changing the hidden layers
+
+## One neuron
+
+How about we alter the number of neurons?
+
+```{python}
+model2 = SimpleClassifier(
+  num_inputs = 2, 
+  num_hidden = 1, 
+  num_outputs = 1
+)
+# push model to GPU
+model2.to(device)
+
+# get new optimizer
+optimizer = torch.optim.SGD(model2.parameters(), lr = 0.1)
+
+# train model
+train_model(model2, optimizer, train_data_loader, loss_module)
+
+# evaluate
+eval_model(model2, test_data_loader)
+```
+
+
+```{python}
+visualize_classification(model2, dataset.data, dataset.label)
+plt.show()
+```
+
+## Two neurons
+
+```{python}
+model2 = SimpleClassifier(
+  num_inputs = 2, 
+  num_hidden = 2, 
+  num_outputs = 1
+)
+# push model to GPU
+model2.to(device)
+
+# get new optimizer
+optimizer = torch.optim.SGD(model2.parameters(), lr = 0.1)
+
+# train model
+train_model(model2, optimizer, train_data_loader, loss_module)
+
+# evaluate
+eval_model(model2, test_data_loader)
+```
+
+```{python}
+visualize_classification(model2, dataset.data, dataset.label)
+plt.show()
+```
